1. makefile 修正 2. custom_kafkaSub解码 3. 新增 custom_kafkaSub与custom_redisSub协议描述

--- a/etc/sources/custom_redisSub.yaml
+++ b/etc/sources/custom_redisSub.yaml
@@ -1,6 +1,6 @@
 default:
-  address: 127.0.0.1:16379
+  address: 10.50.145.4:16379
   db: 0
   password: WuTz@DtXyTeCh.com
-  channels: ['sim_data', 'aa']
+  channels: ['sim_data']
   decompression: zlib
