1. pprof http port 16060 2. log fix

--- a/etc/sources/custom_kafkaSub.yaml
+++ b/etc/sources/custom_kafkaSub.yaml
@@ -5,4 +5,14 @@ default:
   maxBytes: 1000000
   maxAttempts: 3
   saslAuthType: "none"
+  insecureSkipVerify: true
+
+test:
+  brokers: "10.50.145.3:9092"
+  groupID: "groupId"
+  partition: 0
+  maxBytes: 1000000
+  maxAttempts: 3
+  saslAuthType: "none"
+  insecureSkipVerify: true
   
